tests/negative_tests/imports/baseImport.sa
module baseImport where
    x : Bool
    x = True